# opd-evolver

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
config/: memory_writer_lora.example.yaml  model_config.example.yaml  mos_config.example.json
config/ama_bench/: example.yaml
config/api/: example.json
config/awm_bench/: example.yaml
config/intercode_task/: example.yaml
config/lifelong_task/: example.yaml
config/memoryarena/: example.yaml
config/train/: example.yaml
config/vllm_shards/: example.yaml
docker/intercode/: ctf.Dockerfile  nl2bash.Dockerfile  sql-docker-compose.yml  sql.Dockerfile
docker/lifelong/: os.Dockerfile
opd_evolver/: __init__.py  config.py  main_agent.py  sub_agent.py
opd_evolver/base/: hf_snapshot.py
opd_evolver/benchmark/: bench_awm.py  bench_intercode.py  bench_lifelong_agent.py  bench_minihack.py  benchmark.py
opd_evolver/common/: __init__.py  utils.py
opd_evolver/memory/: __init__.py  base_store.py  embeddings.py  evolvelab_adapter.py  memory_manager.py  memrl_adapter.py  reasoning_bank_adapter.py  scoring.py  selector_dataset.py  skill_memory.py  tip_memory.py  tool_memory.py  trajectory_memory.py  usage_log.py  writer_dataset.py
opd_evolver/pipelines/: __init__.py  memory_pipeline.py  memory_prompts.py  memory_selector_prompts.py  types.py
opd_evolver/prompts/: __init__.py  intercode.py
opd_evolver/runners/: intercode_runner.py  memory_intercode_runner.py  memory_task_runner.py  task_runner.py
opd_evolver/subagents/: __init__.py  (+1 more)
scripts/: calc_success_rate_summary_csv.py
(+86 files in other folders)
